# multicoretests

lib/: STM.ml  STM.mli  STM_Core.ml  STM_Domain.ml  STM_Seq.ml  STM_Thread.ml  Spec.ml  dune
src/atomic/: dune  stm_tests.ml
src/buffer/: dune  stm_tests.ml
src/bytes/: dune  lin_tests.ml
src/domainslib/: chan_stm_tests.ml  dune
src/ephemeron/: stm_tests.ml
src/hashtbl/: stm_tests.ml
src/lazy/: dune  stm_tests.ml
src/lockfree/: ws_deque_test.ml
src/neg_tests/: conclist_stm_tests.ml  dune  ref_stm_tests.ml  ref_stm_thread_tests.ml
