;; Tests of the stdlib Bytes library

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps lin_tests.exe))

(env
 (_
  (binaries
   (../check_error_count.exe as check_error_count))))


;; Linearizability tests utilizing ppx_deriving_qcheck

(executable
 (name lin_tests)
 (modules lin_tests)
 (libraries multicorecheck.lin))

(rule
 (alias runtest)
 (package multicoretests)
 (deps lin_tests.exe)
 (action
  (progn
   (bash "(./lin_tests.exe --no-colors --verbose || echo 'test run triggered an error') | tee lin-output.txt")
   (run %{bin:check_error_count} "bytes/lin_tests" 1 lin-output.txt))))
